# digistore-app

./: .gitignore  CMakeLists.txt  README.md  appsigistore.qrc  resources.qrc
app/digisto/modules/: DsModels.qml  Theme.qml  Utils.js  qmldir
configs/: app-config.json  permissions-templ.json
pb/hooks/: checkout.pb.js  dashboard.pb.js  main.pb.js  organization.pb.js  supply.pb.js  utils.js
pb/migrations/: admin.pb.js  collections_snapshot.js
setup/: inno-setup-windows.iss
src/: dscontroller.cpp  dscontroller.h  globals.h  localserver.cpp  localserver.h  main.cpp  permissionmanager.cpp  permissionmanager.h  qaesencryption.cpp  qaesencryption.h  requests.cpp  requests.h  singleinstanceguard.cpp  singleinstanceguard.h
tools/cqtdeployer-linux/: CQtDeployer.sh
tools/cqtdeployer-win/: CQtDeployer.bat
ui/: IconType.qml  Main.qml  Theme.qml  config.json
ui/chartjs/: Chart.js  Chart.qml
ui/controls/: DsAccountInfoDelegateComboItem.qml  DsAccountInfoDelegateLabelItem.qml  DsBusyIndicator.qml  DsBusyOrEmptyOrAccessDeniedTableItem.qml  DsButton.qml  DsCard.qml  DsChartCard.qml  DsCharts.qml  DsCheckBox.qml  DsCheckoutPaymentMethod.qml  DsComboBox.qml  DsComboInputWithLabel.qml  DsDashboardPillSelector.qml  DsDashboardPillValue.qml  DsDashboardQuickLinks.qml  DsDashboardQuickLinksDelegate.qml  DsDateRangeSelector.qml  DsDrawer.qml  DsFormTextElement.qml  DsIcon.qml  DsIconButton.qml  DsImage.qml  DsInputCreditee.qml  DsInputMobileNumber.qml  DsInputSelector.qml  DsInputSelectorWithSearch.qml  DsInputWithLabel.qml  DsInputWithPreview.qml  DsLabel.qml  DsMenu.qml  DsMouseArea.qml  DsNavigationStack.qml  DsPage.qml  DsPopup.qml  DsRightDrawer.qml  DsSearchInput.qml  DsSearchInputNoPopup.qml  DsSettingsCard.qml  DsSettingsRowLabel.qml  DsSettingsRowTextInput.qml  (+13 more)
ui/flow/: AppStackLayout.qml  ApplicationFlow.qml  DsFlowLoader.qml  GlobalModels.qml  UserPermissions.qml
ui/js/: dashboard.js  main.js
ui/popups/: DsCheckoutBalanceDisplayPopup.qml  DsCheckoutCompletePopup.qml  DsCheckoutPopup.qml  DsDateTimePicker.qml  DsMessageBox.qml  DsNewProductPopup.qml  DsNewSupplierPopup.qml  DsNewSupplyPopup.qml  DsOrgNewUserAccountDrawer.qml  DsOrgPocketbaseAminDrawer.qml  DsOrgSettingsDrawer.qml  DsOrgUserAccountDrawer.qml  DsSalesCustomDateSelectorPopup.qml  DsSalesSelectCustomDateTimePopup.qml  DsSelectedSaleProductsDrawer.qml  DsSupplierViewPopup.qml  DsSupplyAddProductPopup.qml  DsSupplyHistoryViewPopup.qml  DsUserAccountDetailsDrawer.qml  DsUserProfileContextPopup.qml  DsViewOrEditProductDrawer.qml
ui/store/: Store.qml
ui/views/: AccountsPage.qml  DashboardPage.qml  InventoryPage.qml  NotificationPage.qml  OrganizationBranches.qml  OrganizationInfo.qml  OrganizationPage.qml  OrganizationSettings.qml  PocketbaseAdminPage.qml  SalesPage.qml  Settings.qml  SettingsPage.qml  SuppliersPage.qml  SupplyPage.qml  TellerPage.qml
ui/views/auth/: ChangePassword.qml  ConfirmEmail.qml  CreateAccount.qml  CreateOrJoinOrganization.qml  Login.qml  Onboarding.qml  PasswordReset.qml
ui/views/settings/: DsAccountSettings.qml  DsGeneralSettings.qml  DsOrganizationSettings.qml
ui/views/settings/controls/: DsSettingsCard.qml
